# WhisperTranscribe

./: .gitignore  README.md  main.py  pyproject.toml  setup_models.py  whispertransscribe.ps1
