[project]
name = "whispertransscribe"
version = "0.1.0"
description = "A small Python programm that makes use of Whisper in transscribing any audio or video file."
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "faster-whisper>=1.2.1",
    "pyannote-audio>=4.0.4",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]
cu126 = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
